--- a/TraceryTutorial/index.html
+++ b/TraceryTutorial/index.html
@@ -4,9 +4,12 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+		<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+
 		<link rel="stylesheet" href="css/layout.css">
 		<link rel="stylesheet" href="css/viz.css">
 		<link rel="stylesheet" href="css/storyStyle.css">
+
 		<title>Particles</title>
 
 	</head>
